# pertpy-datasets

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  distances_example_data.ipynb  noxfile.py  pyproject.toml
.github/workflows/: build.yml
lamin/: mcfarland_2020.ipynb  mcfarland_2020_demo_tutorial.ipynb
pertpy_datasets/: __init__.py  perturbation_curator.py
prepare_scverse_datastructures/: DIALOGUE_example2anndata.R
prepare_scverse_datastructures/Jiang et al. Systematic reconstruction of molecular pathway signatures using scalable single-cell perturbation screens/: README.md  jiang_concatenate.Rmd
prepare_scverse_datastructures/Papalexi, E., Mimitou, E.P., Butler, A.W. et al. ECCITE/: anndata2muon.ipynb  eccite2anndata_sceasy.R
scripts/lamindb_datasets/: mcfarland_2020.ipynb  mcfarland_2020_demo_tutorial-complicated.ipynb  mcfarland_2020_demo_tutorial.ipynb  setup_instance.ipynb
scripts/lamindb_datasets/test-perturbation/.lamindb/: _is_initialized
scripts/pertpy_metadata/chembl/: chembl_data.ipynb
scripts/scverse_datastructures/Jiang et al. Systematic reconstruction of molecular pathway signatures using scalable single-cell perturbation screens/: jiang_convert_to_h5ad.R
scripts/scverse_datastructures/McFaline-Figueroa et al. Multiplex single-cell chemical genomics reveals the kinase dependence of the response to targeted therapy/: README.md  sciplex_convert_to_h5ad.R
tests/: conftest.py  test_perturbation_curator.py
